--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	
 </head>
 <body>
 	<header>
+		<div class="menu-bar">
+			<i class="fas fa-bars"></i>
+		</div>
 		<div class="wrapper">
 			<div class="logo">
 				<a href="#" class="logo-link">Logo</a>
@@ -37,7 +42,7 @@
 					<h4>Package 1</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi illum neque odit.</p>
 				</div>
-				<div class="box">
+				<div class="box middle-box">
 					<h4>Package 2</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi illum neque odit.</p>
 				</div>
@@ -49,7 +54,7 @@
 					<h4>Package 4</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi illum neque odit.</p>
 				</div>
-				<div class="box">
+				<div class="box middle-box">
 					<h4>Package 5</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi illum neque odit.</p>
 				</div>
@@ -90,7 +95,7 @@
 		</div>
 		<div class="contact-body">
 			<div class="wrapper">
-				<form action="">
+				<form class="contact-form" action="">
 					<div class="fields-box">
 						<input type="text" class="text-field" placeholder="Name">
 						<input type="text" class="text-field" placeholder="Subject">
