--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<p>Phone: +54213540</p>
 				<p>company: guitartuts.com</p>
 			</div>
-			<div class="foo-box">
+			<div class="foo-box middle-box">
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
